...
                          _phone = p?.trim();
                          _email = null;
                        });
                      },
                    ).animate().slideIn(100),
                    EESUpTextFormField(
                      key: const Key('password_text_field'),
                      onChanged: (password) {
                        _password = password;
                      },
                      isPassword: true,
                      label: 'Password',
                    ).animate().slideIn(150),
                    20.sH,
                    const _ForgotPasswordButton(
                      key: Key('forgot_password_button'),
                    ).animate().slideIn(150),
                    ElevatedButton(
                      key: const Key('sign_in_button'),
                      onPressed: _handleSignIn,
                      child: const Text('Sign In'),
                    ).animate().slideIn(200),
                    20.sH,
                    HighlightedText(
                      'Don\'t  have an account?  Register',
...
